Add categories model and tests

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
     <div class="header"><h1>New Article</h1></div>
-    <%= render 'form', article: @article %>
+    <%= render 'form', obj: @article %>
 </div>
 
-<%= link_to 'Back', articles_path %>
