--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,4 @@
-<div class="jumbotron">
-  <h1><strong>ALPHA BLOG</strong></h1>
-
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+<div class="center jumbotron">
+  <h1><strong>TECH BLOG</strong></h1>
+  <%= link_to "Sign up now", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %>
 </div>
