--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,28 +1,101 @@
+$navbar-default-bg: #070707;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
 .jumbotron {
-    margin-top: 0px;
-    text-align: center;
-    color: white;
-    background-image: url('img.jpg');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    
+  background-image: asset-url('img.jpg');
+  background-size: cover;
+  height: 400px;
 }
 
-.red {
-    
+.jumbotron h1 {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+  
+}
+
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+  
+}
+
+.article-body {
+  border-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description {
+  margin-top: 0;
+}
+
+#logo {
+    float: left;
+    font-size: 1.7em;
     color: red;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    font-weight: bold;
 }
 
-.btn-red {
-    background-color: red;
-    color: white;
-    border: none;
+.center {
+  text-align: center; 
+}
+
+.btn-xlarge {
+  font-size: 1.7em;
+  background-color: red;
 }
 
 .header {
     text-align: center;
 }
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
+  
+}
+
+.listing {
+  list-style: none;
+}
+
+
+
