--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,25 +1,31 @@
-<%= form_with(model: article, local: true) do |form| %>
-  <% if article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
-
-      <ul>
-      <% article.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  
-  <form>
-    <div class="form-group">
-      <label for="exampleFormControlInput1">Title</label>
-      <%= form.text_field(:title, class: "form-control", placeholder: "Title of article") %>
-    </div>
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Description</label>
-      <%= form.text_area(:description, class: "form-control", placeholder: "Body of the article", :rows => "10") %>
-    </div>
-    <%= form.submit(class:"btn btn-primary") %>
-  </form>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
+<div class="row">
+  <div class="col col-xs-12">
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :title %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :description %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article", autofocus: true %>
+        </div>
+      </div>
+      
+      <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <%= f.submit class:"btn btn-primary btn-lg" %>
+          </div>
+      </div>
+      
+    <% end %>
+  </div>
+</div>
