--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,34 @@
+<h2 align="center">Signup for the Blog</h2>
 <div class="container">
-    <div class="header"><h1>New User</h1></div>
+    <%= form_for(@user) do |f| %>
+      <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@user.errors.count, "error") %> prohibited this article from being saved:</h2>
     
-  <%= form_with(model: :user, local: true) do |form| %>
-  <% if article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this article from being saved:</h2>
-
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-  
-  <form>
-    <div class="form-group">
-      <label for="exampleFormControlInput1">Username</label>
-      <%= form.text_field(:username, class: "form-control", placeholder: "Enter the username") %>
-    </div>
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Email</label>
-      <%= form.text_field(:email, class: "form-control", placeholder: "Enter the email") %>
-    </div>
-    <%= form.submit(class:"btn btn-primary") %>
-  </form>
-<% end %>
+      
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Username</label>
+          <%= f.text_field(:username, class: "form-control", placeholder: "Enter username") %>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Email</label>
+          <%= f.text_field(:email, class: "form-control", placeholder: "Enter email") %>
+        </div>
+         <div class="form-group">
+          <label for="exampleFormControlTextarea1">Password</label>
+          <%= f.password_field(:password, class: "form-control", placeholder: "Enter password") %>
+        </div>
+        
+        <%= f.submit "Sign Up", class: "btn btn-primary"  %>
+      </form>
+    <% end %>
 </div>
+
