--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,7 +95,14 @@ footer ul li {
 
 .listing {
   list-style: none;
+  padding-left: zero;
 }
 
-
+.badge {
+  color: #1B53D3;
+  background-color: #CEF6F5;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
 
