--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,27 +1,43 @@
+<h1 align="center">Title: <%= @article.title %></h1>
 <div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-      <div class="well well-lg">
+  <div class="col-xs-8 col-xs-offset-2">
+    <div class="well well-lg">
+      <div align="center">
+        Created by:
+        <div><%= gravatar_for @article.user, size: 80 %></div>
         <div class="article-title">
-          <%= link_to @article.title, article_path(@article) %> 
+          <%= link_to @article.user.username, user_path(@article.user) %> 
         </div>
-        <div class="article-body">
-          <%= truncate(@article.description, length: 100) %> 
-          <div class="article-meta-details">
-            <small>Created by: <%= @article.user.username if @article.user %>,
-              <%= time_ago_in_words(@article.created_at) %> ago,
-              last_updated: <%= time_ago_in_words(@article.updated_at) %> ago </small>
-          </div>
+      </div>
+      
+      <div class="article-body">
+        <%= truncate(@article.description, length: 100) %> 
+        <div class="article-meta-details">
+          <small>Created:
+            <%= time_ago_in_words(@article.created_at) %> ago,
+            last_updated: <%= time_ago_in_words(@article.updated_at) %> ago </small>
         </div>
-        
-        <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
-          <div class="article-actions">
-            <%= link_to 'Edit this article', edit_article_path(@article), class: "btn btn-xs btn-primary" %> 
-            <%= link_to "Delete this article", article_path(@article), method: :delete, 
-                                          data: { confirm: "Are you sure you want to delete the article?"}, 
-                                          class: "btn btn-xs btn-danger" %>
-          </div>
+      </div>
+      
+      <div>
+        Categories:
+        <% @article.categories.each do |category| %>
+          <span class="badge">
+              <%= category.name %>
+          </span>
         <% end %>
       </div>
+      
+      <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+        <div class="article-actions">
+          <%= link_to 'Edit this article', edit_article_path(@article), class: "btn btn-xs btn-primary" %> 
+          <%= link_to "Delete this article", article_path(@article), method: :delete, 
+                                        data: { confirm: "Are you sure you want to delete the article?"}, 
+                                        class: "btn btn-xs btn-danger" %>
+        </div>
+      <% end %>
+      
     </div>
+  </div>
 </div>
 
