--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,10 +3,12 @@
     <% @categories.each do |category| %>
         <ul class="listing">
             <div class="row">
-                <div class="well col--4 col-md-offset-4">
-                    <li class="article-title">
-                        <%= link_to "#{category.name}", category_path(category) %>
-                    </li>
+                <div class="col-xs-6 col-xs-offset-3">
+                    <div class="well well-sm">
+                        <li class="article-title">
+                            <%= link_to "#{category.name}", category_path(category) %>
+                        </li>
+                    </div>
                 </div>
             </div>
         </ul>
